# oopsieverse

./: .gitignore  MUJOCO_LOG.TXT  README.md  index.html  install.py  pyproject.toml
.github/ISSUES_TEMPLATE/: infra_task.md  refactor_task.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  experiment_task.md  feature_request.md  pull_request_template.md
damagesim/: __init__.py
damagesim/core/: __init__.py  damageable_env.py  damageable_mixin.py
damagesim/core/evaluators/: __init__.py  base.py  electrical.py  mechanical.py  thermal.py
damagesim/omnigibson/: __init__.py  damageable_env.py  damageable_mixin.py
damagesim/omnigibson/evaluators/: __init__.py  electrical.py  mechanical.py  thermal.py
damagesim/omnigibson/params/: __init__.py  damage_params.py
damagesim/robosuite/: __init__.py  damageable_env.py  damageable_mixin.py
damagesim/utils/: __init__.py  visualization.py
learning/models/: cfm_policy.py  encoder.py  transformer.py  utils.py
oopsiebench/envs/: registry.py
oopsiebench/envs/behavior1k/: base.py  (+11 more)
resources/init_states/: add_firewood.pkl  nav_to_table.pkl  place_bowl.pkl  place_plate.pkl  place_plate_old.pkl  shelve_item.pkl  wipe_counter.pkl
scripts/: inspect_hdf5.py  playback.py  playback_b1k.py  playback_robocasa.py  recollect_from_trial.py  teleop_b1k.py  teleop_b1k_debug.py  teleop_robocasa.py  test_spacemouse.py  verify_damageable_env.py
scripts/task_configs/: base.py  pour_water.py  shelve_item.py
tests/: test_add_firewood.py  test_behavior1k.py  test_robocasa.py  test_shelve_item.py
utils/: io_utils.py  misc_utils.py
(+45 files in other folders)
